--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,6 @@ jobs:
 
       - name: Run tests
         run: npm run test
+
+      - name: Run test coverage
+        run: npm run test -- --coverage
