Rename 'Code style' to 'Style' in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run test coverage
         run: npm run test -- --coverage
   style:
-    name: Code style
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
