--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,3 +47,6 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
+
+      - name: Check linting
+        run: npm run lint -- --max-warnings=0
