--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,4 +36,4 @@ jobs:
         run: "gcloud info"
 
       - name: "Deploy to GCP"
-        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-473620/notely-ar-repo/notely:${GITHUB_SHA:0:7} .
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-473620/notely-ar-repo/notely:latest .
