--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -34,6 +37,9 @@ jobs:
 
       - name: "Use gcloud CLI"
         run: "gcloud info"
+
+      - name: "Run migrations"
+        run: npm run db:migrate
 
       - name: "Deploy to GCP"
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-473620/notely-ar-repo/notely:latest .
